codama-macros/tests/codama_attribute/type_nodes/struct_field_type_node/name_already_set.fail.stderr
error: name is already set
 --> tests/codama_attribute/type_nodes/struct_field_type_node/name_already_set.fail.rs:3:42
  |
3 | #[codama(type = field("age", number(u8), "years"))]
  |                                          ^^^^^^^

error: name is already set
 --> tests/codama_attribute/type_nodes/struct_field_type_node/name_already_set.fail.rs:6:56
  |
6 | #[codama(type = field(name = "age", type = number(u8), name = "years"))]
  |                                                        ^^^^^^^^^^^^^^
