codama-macros/tests/codama_attribute/type_nodes/struct_field_type_node/name_already_set.fail.rs
use codama_macros::codama;

#[codama(type = field("age", number(u8), "years"))]
pub struct Test;

#[codama(type = field(name = "age", type = number(u8), name = "years"))]
pub struct TestExplicit;

fn main() {}
